update tracking to include outbound links and fix spacing for mobile

--- a/style.css
+++ b/style.css
@@ -116,12 +116,12 @@ a:hover {
 
     h2 {
       font-size: 20px;
-      line-height: 1.2rem;
+      line-height: 1.3rem;
     }
 
     
     p {
-      font-size: 1.0rem;
+      font-size: 20px;
       line-height: 1.3rem;
     }
   }
